--- a/package.json
+++ b/package.json
@@ -35,5 +35,17 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 14.0.3.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Junaid0251/BudgetCalc.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Junaid0251/BudgetCalc/issues"
+  },
+  "homepage": "https://github.com/Junaid0251/BudgetCalc#readme"
 }
